deploy/k8s/overlays/eks-demo/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: webchat
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: webchat
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messages
  namespace: webchat
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: webchat
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-worker
  namespace: webchat
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploads
  namespace: webchat
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: webchat
spec:
  replicas: 2
