deploy/k8s/overlays/eks-demo/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webchat
  namespace: webchat
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 5000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
